better object pools support for StringBuffer