@@ -1,5 +1,5 @@
 plugins {
-    java
+    id("java")
 }
 
 group = "org.capeph"
@@ -16,4 +16,11 @@ dependencies {
     implementation("io.aeron:aeron-all:1.44.1")
     implementation("org.apache.logging.log4j:log4j-api:2.23.1")
     implementation("org.apache.logging.log4j:log4j-core:2.23.1")
+    testImplementation(platform("org.junit:junit-bom:5.10.0"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
 }
